[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.develop]
inherits = "release"
overflow-checks = true
incremental = true

[profile.release]
debug = true

[dependencies]
aoc_lib = { git = "https://github.com/Measter/aoc_lib.git" }
color-eyre = "0.6.2"
itertools = "0.12.0"
